[package]
name = "walloc"
version = "0.1.0"
edition = "2024"

[lib]
name = "walloc"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.77"
reqwest = "0.12.15"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = {version = "0.3.77", features = ["console"]}

[profile.release]
opt-level = 2
lto = true
strip = true
codegen-units = 1
